<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/media_player_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/media_player_controls_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_header_container"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@null"
                android:scaleType="center"
                android:src="@drawable/ic_arrow_back_ios_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#3C3A3A" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:text="@string/now_playing"
                android:textColor="#3E3E3E"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_more"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_more"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@null"
                android:scaleType="center"
                android:src="@drawable/ic_more_vert_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#303030" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_artist_art_container"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_marginVertical="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_header_container">

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_desc_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_artist_art_container">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="2dp"
                    android:text="@string/hope"
                    android:textColor="#434343"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="2dp"
                    android:text="@string/nf"
                    android:textColor="#8c8888"
                    android:textSize="19sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@null"
                android:scaleX="1.26"
                android:scaleY="1.26"
                android:src="@drawable/ic_favorite1_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#848484" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_control_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_desc_container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:progress="25"
                    android:progressBackgroundTint="#888888"
                    android:progressTint="#343434"
                    android:thumbTint="#343434"

                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="4dp"
                        android:text="@string/track_time"
                        android:textColor="#343434"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="4dp"
                        android:text="@string/track_time_end"
                        android:textColor="#343434"
                        android:textSize="14sp" />


                </FrameLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:clipChildren="false"
                android:clipToPadding="false">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btn_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:backgroundTint="#FFF"
                    android:elevation="0dp"
                    android:shadowColor="#000000"
                    app:collapsedSize="40dp"
                    app:icon="@drawable/ic_repeat_24px"
                    app:iconSize="28dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_skip_previous"
                    app:layout_goneMarginBaseline="0dp"
                    app:layout_goneMarginLeft="0dp" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btn_skip_previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:backgroundTint="#FFF"
                    android:elevation="0dp"
                    android:shadowColor="#000000"
                    app:collapsedSize="40dp"
                    app:icon="@drawable/ic_skip_previous_24px"
                    app:iconSize="34dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_play_pause"
                    app:layout_constraintStart_toEndOf="@id/btn_repeat"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btn_play_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:paddingVertical="2dp"
                    android:backgroundTint="#FFF"
                    android:elevation="0dp"
                    android:shadowColor="#000000"
                    app:collapsedSize="80dp"
                    app:icon="@drawable/ic_play_arrow_24px"
                    app:iconSize="28dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_skip_next"
                    app:layout_constraintStart_toEndOf="@id/btn_skip_previous"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btn_skip_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:backgroundTint="#FFF"
                    android:elevation="0dp"
                    android:shadowColor="#000000"
                    app:collapsedSize="40dp"
                    app:icon="@drawable/ic_skip_next_24px"
                    app:iconSize="34dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_shuffle"
                    app:layout_constraintStart_toEndOf="@id/btn_play_pause"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btn_shuffle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:backgroundTint="#FFF"
                    android:elevation="0dp"
                    android:shadowColor="#000000"
                    app:collapsedSize="40dp"
                    app:icon="@drawable/ic_shuffle_24px"
                    app:iconSize="28dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_goneMarginBaseline="0dp"
                    app:layout_goneMarginLeft="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/media_player_bottom_sheet_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.example.extensions.bottomsheet.CustomBottomSheetBehaviorJava"
        app:behavior_defaultState ="collapsed"
        app:behavior_peekHeight = "32dp"
        >
<!--        app:layout_anchor="@+id/media_player_controls_container"-->

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            style="@style/CustomCardViewStyle"
            />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>